--- a/main.css
+++ b/main.css
@@ -96,3 +96,18 @@ footer {
 
   color: rgba(39, 33, 66, 0.4);
 }
+.weather-forcast {
+  text-align: center;
+  color: #000;
+  margin-top: 20px;
+}
+.weather-forcast-day {
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forcast-temp-min {
+  opacity: 0.5;
+}
+.weather-forcast-temp {
+  font-size: 14x;
+}
