--- a/main.css
+++ b/main.css
@@ -73,13 +73,14 @@ main {
 
 .current-temperature-icon {
   position: relative;
-  top: -8px;
+  top: -6px;
   font-size: 40px;
   margin-right: 10px;
 }
 
 .current-temperature-value {
-  font-size: 80px;
+  font-size: 88px;
+  line-height: 88px;
   font-weight: bold;
 }
 
@@ -96,18 +97,30 @@ footer {
 
   color: rgba(39, 33, 66, 0.4);
 }
-.weather-forcast {
+.weather-forecast {
   text-align: center;
   color: #000;
   margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
 }
-.weather-forcast-day {
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
+}
+.weather-forecast-day {
+  text-align: center;
+  line-height: 20px;
+  margin-bottom: 10px;
   font-size: 16px;
   opacity: 0.5;
 }
-.weather-forcast-temp-min {
+.weather-forecast-temp-min {
   opacity: 0.5;
 }
-.weather-forcast-temp {
+.weather-forecast-temp {
   font-size: 14x;
+  padding: 0 10px;
 }
